[package]
name = "solve"
version = "0.1.0"
edition = "2021"

[lib]
name = "solve"
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-program = "1.16.5"
